# dataBobCFOdemoNew

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml
.claude/: ARCHITECTURE.md  CONVENTIONS.md  PLAYBOOKS.md  TESTING.md  TROUBLESHOOTING.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0000_initial.py  0001_add_ai_fields.py  0002_semantic_layer.py  0003_transformation_steps.py  0004_scenario_base_config.py  0005_knowledge_entries.py  0006_consolidate_knowledge_types.py  0007_add_models.py  0008_global_calendar.py  0009_knowledge_model_required.py  0010_model_settings.py
backend/app/: config.py  database.py  main.py
backend/app/api/: routes.py
backend/app/models/: __init__.py  metadata.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: ai_context.py  calendar_svc.py  chat.py  parser.py  query.py  scenario.py  schema_agent.py  storage.py  transform.py
frontend/: index.html  package.json
frontend/src/: App.jsx  api.js  main.jsx
scripts/: wait_for_postgres.py
